# Easygram

./: .CMakeLists.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  log  main.cpp
.cache/clangd/index/: CodeScene.cpp.72D635F01D98A3E0.idx  CodeScene.h.F5F6CF9DCE9C710B.idx  LoadingScene.cpp.67E9D148F8CBE614.idx  LoadingScene.h.529E8ED03BD785F2.idx  MainScene.cpp.097348BA373B389B.idx  MainScene.h.E9D969DBE3308877.idx  PasswordScene.cpp.7C6405F80969F6A1.idx  PasswordScene.h.2EDE75D2BC405547.idx  PhoneScene.cpp.F2765D27B82BD84C.idx  PhoneScene.h.3A6B1752D07FBC2C.idx  Renderer.cpp.408112EFB54E4F75.idx  Renderer.h.2B230F342113F575.idx  Scene.h.9883F7CB744DDD90.idx  config.h.D0C5A8660A5B795D.idx  main.cpp.4139FAFCA61B25BC.idx  processor.cpp.4684A191F8227DF0.idx  processor.h.69BAFEC6AC3DA01B.idx  scenes.cpp.C5D187EF0293B896.idx  sender.cpp.5F992C38DE3F5050.idx  sender.h.E40AA3B8FE2CCC0B.idx  state.h.34A088EFCB0EC3D0.idx  telegram.cpp.B417FDD4C1E42278.idx
src/: .state.h.swp  .telegram.cpp.swp  config.h  main.cpp  renderer.cpp  renderer.h  scenes.cpp  state.h  telegram.cpp
src/scenes/: .Renderer.cpp.swp  .main.cpp.swp  CodeScene.cpp  CodeScene.h  LoadingScene.cpp  LoadingScene.h  MainScene.cpp  MainScene.h  PasswordScene.cpp  PasswordScene.h  PhoneScene.cpp  PhoneScene.h  Renderer.cpp  Renderer.h  code.cpp  code.h  load.cpp  load.h  main.cpp  main.h  manager.cpp  manager.h  password.cpp  password.h  phone.cpp  phone.h  scene.h
src/telegram/: .facade.cpp.swp  .handlers.cpp.swp  .processor.cpp.swp  facade.cpp  facade.h  handlers.cpp  handlers.h  processor.cpp  processor.h  responses.cpp  responses.h  sender.cpp  sender.h
src/utils/: .chats.cpp.swp  .messages.cpp.swp  .messages.h.swp  chats.cpp  chats.h  config.h  messages.cpp  messages.h  singleton.h
tdlib/: db.sqlite  db.sqlite-shm  db.sqlite-wal  td.binlog
utils/: scenes.hpp
